# verse-inserter

./: .coverage  .gitignore  .replit  BUILD.md  README.md  VerseInserter.iss  __main__.py  build_windows.bat  build_windows.ps1  cli.py  launch.py  license.rtf  pyproject.toml  readme.rtf  replit.md  run_tests.bat  run_tests.ps1  verse_inserter.spec
api/: api_exceptions.py  bible_api_client.py
config/: settings.py
core/: placeholder_parser.py
docs/: BATCH_PROCESSING.md
docs/images/: IMPROVEMENTS_SUMMARY.md
models/: placeholder.py
tests/: __init__.py  conftest.py  test_api_client.py  test_batch_processor.py  test_cache_manager.py  test_document_processor.py  test_formatting_preservation.py  test_models.py  test_offline_database.py
ui/: main_window.py
verse_inserter/: __init__.py  __main__.py  version.py
verse_inserter/api/: __init__.py  bible_api_client.py  fall_back.py  free_bible_fallback.py  nlt_api_client.py
verse_inserter/config/: settings.py
verse_inserter/core/: __init__.py  batch_processor.py  cache_manager.py  citation_formatter.py  document_processor.py  format_template.py  offline_database.py  offline_verse_provider.py  placeholder_parser.py  translation_downloader.py
verse_inserter/models/: __init__.py  document.py  verse.py
verse_inserter/ui/: main_window.py
verse_inserter/ui/widgets/: batch_dialog.py  download_progress_dialog.py  preview_dialog.py  settings_dialog.py  template_manager_dialog.py  translation_manager_dialog.py
verse_inserter/utils/: __init__.py  file_handler.py  logger.py  validators.py
